@@ -18,7 +18,7 @@ noinst_HEADERS = bswap.h ffmpeg_bswap.h
 
 xineinclude_HEADERS  = buffer.h metronom.h configfile.h vo_scale.h \
 	audio_out.h resample.h video_out.h xine_internal.h spu_decoder.h \
-	video_overlay.h osd.h scratch.h xine_plugin.h xineintl.h  \
+	video_overlay.h osd.h spu.h scratch.h xine_plugin.h xineintl.h \
 	plugin_catalog.h audio_decoder.h video_decoder.h post.h \
 	io_helper.h broadcaster.h info_helper.h refcounter.h alphablend.h
 
@@ -27,7 +27,7 @@ lib_LTLIBRARIES = libxine.la
 libxine_la_SOURCES = xine.c metronom.c configfile.c buffer.c \
 	load_plugins.c video_decoder.c buffer_types.c \
 	audio_decoder.c video_out.c audio_out.c resample.c events.c \
-	video_overlay.c osd.c scratch.c demux.c vo_scale.c \
+	video_overlay.c osd.c spu.c scratch.c demux.c vo_scale.c \
 	xine_interface.c post.c tvmode.c broadcaster.c io_helper.c \
 	input_rip.c input_cache.c info_helper.c refcounter.c \
 	alphablend.c
